# goit-hm-web-13

./: docker-compose.yml  main.py  pyproject.toml
first_part/: pyproject.toml
first_part/src/routes/: auth.py  users.py
postgres-data/: postmaster.pid
postgres-data/base/16384/: pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
second_part/: pyproject.toml
second_part/hm_project/: db.sqlite3
second_part/hm_project/app_auth/: forms.py  views.py
second_part/hm_project/hm_project/: .env  config.py  settings.py
second_part/hm_project/quotes/: urls.py  utils.py
second_part/hm_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py
src/conf/: config.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contact.py
Друга частина/: pyproject.toml
Друга частина/hm_project/app_auth/: urls.py
Друга частина/hm_project/app_auth/templates/app_auth/: login.html  logout.html  password_reset_complete.html  password_reset_email.html
Друга частина/hm_project/hm_project/: config.py  settings.py  urls.py
Друга частина/hm_project/quotes/: forms.py  models.py  views.py
Друга частина/hm_project/quotes/migrations/: 0002_alter_tag_options_author_user_quote_user_and_more.py
Друга частина/hm_project/quotes/templates/quotes/: add_author.html  base.html  index.html  upload.html
Друга частина/hm_project/quotes/templatetags/: extract.py
Друга частина/hm_project/utils/: add_quotes_to_mongo.py
Перша частина/: main.py
Перша частина/src/repository/: users.py
(+11 files in other folders)
